// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app menu mac 1`] = `
Array [
  Object {
    "label": "Brim",
    "submenu": Array [
      Object {
        "click": [Function],
        "label": "About TestApp",
      },
      Object {
        "type": "separator",
      },
      Object {
        "click": [Function],
        "id": "preferences",
        "label": "Preferences...",
      },
      Object {
        "role": "services",
        "submenu": Array [],
      },
      Object {
        "type": "separator",
      },
      Object {
        "role": "hide",
      },
      Object {
        "role": "hideOthers",
      },
      Object {
        "role": "unhide",
      },
      Object {
        "type": "separator",
      },
      Object {
        "role": "quit",
      },
    ],
  },
  Object {
    "label": "File",
    "submenu": Array [
      Object {
        "accelerator": "CmdOrCtrl+N",
        "click": [Function],
        "label": "New Window",
      },
      Object {
        "type": "separator",
      },
      Object {
        "click": [Function],
        "label": "Export Results As...",
      },
      Object {
        "type": "separator",
      },
      Object {
        "click": [Function],
        "label": "Close Tab",
      },
      Object {
        "click": [Function],
        "label": "Close Window",
      },
    ],
  },
  Object {
    "label": "Edit",
    "submenu": Array [
      Object {
        "role": "undo",
      },
      Object {
        "role": "redo",
      },
      Object {
        "type": "separator",
      },
      Object {
        "role": "cut",
      },
      Object {
        "role": "copy",
      },
      Object {
        "role": "paste",
      },
      Object {
        "role": "pasteAndMatchStyle",
      },
      Object {
        "role": "delete",
      },
      Object {
        "role": "selectAll",
      },
      Object {
        "type": "separator",
      },
      Object {
        "label": "Speech",
        "submenu": Array [
          Object {
            "role": "startSpeaking",
          },
          Object {
            "role": "stopSpeaking",
          },
        ],
      },
    ],
  },
  Object {
    "label": "Query",
    "submenu": Array [
      Object {
        "accelerator": "CmdOrCtrl+K",
        "click": [Function],
        "label": "Pin Search",
      },
      Object {
        "accelerator": "CmdOrCtrl+Shift+K",
        "click": [Function],
        "label": "Clear Pins",
      },
      Object {
        "accelerator": "CmdOrCtrl+L",
        "click": [Function],
        "label": "Focus Search Bar",
      },
      Object {
        "type": "separator",
      },
      Object {
        "accelerator": "CmdOrCtrl+Left",
        "click": [Function],
        "label": "Back",
      },
      Object {
        "accelerator": "CmdOrCtrl+Right",
        "click": [Function],
        "label": "Forward",
      },
    ],
  },
  Object {
    "label": "View",
    "submenu": Array [
      Object {
        "role": "reload",
      },
      Object {
        "role": "forceReload",
      },
      Object {
        "role": "toggleDevTools",
      },
      Object {
        "type": "separator",
      },
      Object {
        "role": "resetZoom",
      },
      Object {
        "role": "zoomIn",
      },
      Object {
        "role": "zoomOut",
      },
      Object {
        "type": "separator",
      },
      Object {
        "accelerator": "CmdOrCtrl+[",
        "click": [Function],
        "id": "toggle-left-pane",
        "label": "Toggle Left Pane",
      },
      Object {
        "accelerator": "CmdOrCtrl+]",
        "click": [Function],
        "id": "toggle-right-pane",
        "label": "Toggle Right Pane",
      },
      Object {
        "type": "separator",
      },
      Object {
        "role": "togglefullscreen",
      },
    ],
  },
  Object {
    "role": "window",
    "submenu": Array [
      Object {
        "role": "minimize",
      },
      Object {
        "type": "separator",
      },
      Object {
        "click": [Function],
        "label": "Reset State",
      },
      Object {
        "type": "separator",
      },
      Object {
        "type": "separator",
      },
      Object {
        "role": "close",
      },
      Object {
        "role": "zoom",
      },
      Object {
        "type": "separator",
      },
      Object {
        "role": "front",
      },
      Object {
        "click": [Function],
        "label": "Organize Windows",
      },
    ],
  },
  Object {
    "role": "help",
    "submenu": Array [
      Object {
        "click": [Function],
        "label": "Release Notes",
      },
      Object {
        "click": [Function],
        "label": "Zed Syntax Docs",
      },
      Object {
        "click": [Function],
        "label": "Slack Support Channel",
      },
      Object {
        "click": [Function],
        "label": "Github Repository",
      },
      Object {
        "click": [Function],
        "label": "Submit Issue...",
      },
    ],
  },
]
`;

exports[`app menu windows 1`] = `
Array [
  Object {
    "label": "File",
    "submenu": Array [
      Object {
        "accelerator": "CmdOrCtrl+N",
        "click": [Function],
        "label": "New Window",
      },
      Object {
        "type": "separator",
      },
      Object {
        "click": [Function],
        "label": "Export Results As...",
      },
      Object {
        "type": "separator",
      },
      Object {
        "click": [Function],
        "id": "preferences",
        "label": "Settings",
      },
      Object {
        "type": "separator",
      },
      Object {
        "click": [Function],
        "label": "Close Tab",
      },
      Object {
        "click": [Function],
        "label": "Close Window",
      },
      Object {
        "click": [Function],
        "label": "Exit",
      },
    ],
  },
  Object {
    "label": "Edit",
    "submenu": Array [
      Object {
        "role": "undo",
      },
      Object {
        "role": "redo",
      },
      Object {
        "type": "separator",
      },
      Object {
        "role": "cut",
      },
      Object {
        "role": "copy",
      },
      Object {
        "role": "paste",
      },
      Object {
        "role": "pasteAndMatchStyle",
      },
      Object {
        "role": "delete",
      },
      Object {
        "role": "selectAll",
      },
    ],
  },
  Object {
    "label": "Query",
    "submenu": Array [
      Object {
        "accelerator": "CmdOrCtrl+K",
        "click": [Function],
        "label": "Pin Search",
      },
      Object {
        "accelerator": "CmdOrCtrl+Shift+K",
        "click": [Function],
        "label": "Clear Pins",
      },
      Object {
        "accelerator": "CmdOrCtrl+L",
        "click": [Function],
        "label": "Focus Search Bar",
      },
      Object {
        "type": "separator",
      },
      Object {
        "accelerator": "CmdOrCtrl+Left",
        "click": [Function],
        "label": "Back",
      },
      Object {
        "accelerator": "CmdOrCtrl+Right",
        "click": [Function],
        "label": "Forward",
      },
    ],
  },
  Object {
    "label": "View",
    "submenu": Array [
      Object {
        "role": "reload",
      },
      Object {
        "role": "forceReload",
      },
      Object {
        "role": "toggleDevTools",
      },
      Object {
        "type": "separator",
      },
      Object {
        "role": "resetZoom",
      },
      Object {
        "role": "zoomIn",
      },
      Object {
        "role": "zoomOut",
      },
      Object {
        "type": "separator",
      },
      Object {
        "accelerator": "CmdOrCtrl+[",
        "click": [Function],
        "id": "toggle-left-pane",
        "label": "Toggle Left Pane",
      },
      Object {
        "accelerator": "CmdOrCtrl+]",
        "click": [Function],
        "id": "toggle-right-pane",
        "label": "Toggle Right Pane",
      },
      Object {
        "type": "separator",
      },
      Object {
        "role": "togglefullscreen",
      },
    ],
  },
  Object {
    "role": "window",
    "submenu": Array [
      Object {
        "role": "minimize",
      },
      Object {
        "type": "separator",
      },
      Object {
        "click": [Function],
        "label": "Reset State",
      },
      Object {
        "type": "separator",
      },
    ],
  },
  Object {
    "role": "help",
    "submenu": Array [
      Object {
        "click": [Function],
        "label": "Release Notes",
      },
      Object {
        "click": [Function],
        "label": "Zed Syntax Docs",
      },
      Object {
        "click": [Function],
        "label": "Slack Support Channel",
      },
      Object {
        "click": [Function],
        "label": "Github Repository",
      },
      Object {
        "click": [Function],
        "label": "Submit Issue...",
      },
      Object {
        "type": "separator",
      },
      Object {
        "click": [Function],
        "label": "About TestApp",
      },
    ],
  },
]
`;
